# barcode-scanner

./: Cargo.toml  README.md
.sqlx/: query-135d1aa3dae14869cf207217f90832f0ff9f55fd3d2f2115c68b73600ea9ec65.json  query-5e56be1f33ad869c3db0f0014459bdf0cbf8102ea73520236d86ef26a81ee8cc.json  query-6960f0637a4130bb2649ac3caa00d01ea966663b7a15e4ec765a5102b63cc72c.json  query-8cbd2e60ceaf8e9fe965050ca4b422007d1d535035515fad6ad693094a06c3ac.json  query-91f0f63a4e248e85d438fe52c509eb9884517eed90b56f3b35cd0484b20dfa2b.json  query-a5ba57675500bf0816321d8e11fe07b7dd62e5edf409ffde664ad88126e90b17.json  query-b5c04fa64156aea778d2c274f6ec23a2f59e429056e403665a31c3e784a33cc9.json  query-d6b9bd2cb23d8fe52c1149d9c0b79e394ab1443ec89ebad840f0d3ccf448b681.json  query-ffa9082493eaf958344ccb0d9bacc21cc7226d730c13c7fc75926131e731789c.json
migrations/: 20240316035808_smart_health_cards.sql  20240317045225_cvx_codes.sql  20240319012552_expiring_cache.sql
src/: barcode_decoders.rs  barcode_scanner.rs  config.rs  main.rs  ui.rs
src/barcode_decoders/: aamva.rs  generic.rs  link.rs  shc.rs
src/ui/: scanner_settings.rs  state_worker.rs
