[package]
name = "barcode-scanner"
version = "0.1.0"
edition = "2021"
authors = ["Syfaro <syfaro@huefox.com>"]

[dependencies]
async-hid = "0.1.0"
eframe = "0.26.2"
enumflags2 = "0.7.9"
eyre = "0.6.12"
futures = "0.3.30"
hex = "0.4.3"
phf = { version = "0.11.2", features = ["macros"] }
ring-channel = "0.12.0"
tokio = { version = "1.36.0", features = ["macros", "rt", "time", "sync", "io-util", "rt-multi-thread"] }
tokio-serial = "5.4.4"
tokio-stream = "0.1.15"
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
