[package]
name = "barcode-scanner"
version = "0.1.0"
edition = "2021"
authors = ["Syfaro <syfaro@huefox.com>"]

[dependencies]
async-hid = "0.1.0"
async-trait = "0.1.77"
base64 = "0.22.0"
eframe = "0.26.2"
egui_extras = { version = "0.26.2", features = ["syntect"] }
egui-modal = "0.3.5"
enum-iterator = "2.0.0"
enumflags2 = "0.7.9"
eyre = "0.6.12"
flate2 = "1.0.28"
futures = "0.3.30"
hex = "0.4.3"
icu = "1.4.0"
itertools = "0.12.1"
jsonwebtoken = "9.2.0"
lexical-sort = "0.3.1"
open = "5.1.2"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "sqlite", "migrate", "macros", "time", "json"] }
sys-locale = "0.3.1"
time = { version = "0.3.34", features = ["local-offset"] }
tokio = { version = "1.36.0", features = ["macros", "rt", "time", "sync", "io-util", "rt-multi-thread"] }
tokio-serial = "5.4.4"
tokio-stream = "0.1.15"
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4"] }

aamva = { path = "../aamva-rs" }
